Fix accessibility API mappings for the 'address' element

The 'address' element was being treated as a landmark (contentinfo);
it should instead be treated as a generic container. Update blink
and the tests accordingly.

Bug: 873118
Change-Id: I5baf1b7f5e9a94b3f9a1ef75d4ee14e3e7351567
Reviewed-on: https://chromium-review.googlesource.com/c/1448739
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Joanmarie Diggs <joanmarie.diggs@gmail.com>
Cr-Commit-Position: refs/heads/master@{#628354}
Former-commit-id: 2edc7a2d53c6089d475b6d04901461d01546bbe1